Dcoder/src/com/ppahare/antlrv4/decoder/TestParser.java
// Generated from Test.g4 by ANTLR 4.2.2

package com.ppahare.antlrv4.decoder;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALPHANUM=1, TWODIGIT=2, PRE=3, SUFF=4, DIGIT=5, HEX=6, NEWLINE=7, UNDERSCORE=8, 
		HYPHEN=9;
	public static final String[] tokenNames = {
		"<INVALID>", "ALPHANUM", "TWODIGIT", "'-26-23'", "'-3b'", "DIGIT", "HEX", 
		"'\n'", "'_'", "'-'"
	};
	public static final int
		RULE_prog = 0, RULE_expr = 1, RULE_unicode = 2, RULE_nondigit = 3, RULE_letter = 4, 
		RULE_digit = 5;
	public static final String[] ruleNames = {
		"prog", "expr", "unicode", "nondigit", "letter", "digit"
	};

	@Override
	public String getGrammarFileName() { return "Test.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TestParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public String value = "";
		public ExprContext n;
		public List<TerminalNode> NEWLINE() { return getTokens(TestParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TestParser.NEWLINE, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALPHANUM) | (1L << PRE) | (1L << UNDERSCORE) | (1L << HYPHEN))) != 0)) {
				{
				{
				setState(12); ((ProgContext)_localctx).n = expr();
				_localctx.value += (((ProgContext)_localctx).n.value);
				}
				}
				setState(19);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(20); match(NEWLINE);
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String value;
		public Token n0;
		public UnicodeContext n1;
		public NondigitContext n2;
		public LetterContext n3;
		public UnicodeContext unicode() {
			return getRuleContext(UnicodeContext.class,0);
		}
		public TerminalNode UNDERSCORE() { return getToken(TestParser.UNDERSCORE, 0); }
		public LetterContext letter() {
			return getRuleContext(LetterContext.class,0);
		}
		public NondigitContext nondigit() {
			return getRuleContext(NondigitContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(37);
			switch (_input.LA(1)) {
			case UNDERSCORE:
				enterOuterAlt(_localctx, 1);
				{
				setState(26); ((ExprContext)_localctx).n0 = match(UNDERSCORE);
				((ExprContext)_localctx).value =  " ";
				}
				break;
			case PRE:
				enterOuterAlt(_localctx, 2);
				{
				setState(28); ((ExprContext)_localctx).n1 = unicode();
				((ExprContext)_localctx).value =  ((ExprContext)_localctx).n1.value;
				}
				break;
			case HYPHEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(31); ((ExprContext)_localctx).n2 = nondigit();
				((ExprContext)_localctx).value =  ((ExprContext)_localctx).n2.value;
				}
				break;
			case ALPHANUM:
				enterOuterAlt(_localctx, 4);
				{
				setState(34); ((ExprContext)_localctx).n3 = letter();
				((ExprContext)_localctx).value =  ((ExprContext)_localctx).n3.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnicodeContext extends ParserRuleContext {
		public String value;
		public Token DIGIT;
		public TerminalNode PRE() { return getToken(TestParser.PRE, 0); }
		public TerminalNode DIGIT() { return getToken(TestParser.DIGIT, 0); }
		public TerminalNode SUFF() { return getToken(TestParser.SUFF, 0); }
		public UnicodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unicode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterUnicode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitUnicode(this);
		}
	}

	public final UnicodeContext unicode() throws RecognitionException {
		UnicodeContext _localctx = new UnicodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unicode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); match(PRE);
			{
			setState(40); ((UnicodeContext)_localctx).DIGIT = match(DIGIT);
			((UnicodeContext)_localctx).value =  Character.toString((char)Integer.parseInt((((UnicodeContext)_localctx).DIGIT!=null?((UnicodeContext)_localctx).DIGIT.getText():null)));
			}
			setState(43); match(SUFF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NondigitContext extends ParserRuleContext {
		public String value;
		public Token TWODIGIT;
		public TerminalNode HYPHEN() { return getToken(TestParser.HYPHEN, 0); }
		public TerminalNode TWODIGIT() { return getToken(TestParser.TWODIGIT, 0); }
		public NondigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nondigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterNondigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitNondigit(this);
		}
	}

	public final NondigitContext nondigit() throws RecognitionException {
		NondigitContext _localctx = new NondigitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nondigit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(HYPHEN);
			{
			setState(46); ((NondigitContext)_localctx).TWODIGIT = match(TWODIGIT);
			((NondigitContext)_localctx).value =  ""+ (char)Integer.parseInt((((NondigitContext)_localctx).TWODIGIT!=null?((NondigitContext)_localctx).TWODIGIT.getText():null),16);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetterContext extends ParserRuleContext {
		public String value;
		public Token ALPHANUM;
		public TerminalNode ALPHANUM() { return getToken(TestParser.ALPHANUM, 0); }
		public LetterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterLetter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitLetter(this);
		}
	}

	public final LetterContext letter() throws RecognitionException {
		LetterContext _localctx = new LetterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_letter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); ((LetterContext)_localctx).ALPHANUM = match(ALPHANUM);
			((LetterContext)_localctx).value =  (((LetterContext)_localctx).ALPHANUM!=null?((LetterContext)_localctx).ALPHANUM.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DigitContext extends ParserRuleContext {
		public String value;
		public Token DIGIT;
		public TerminalNode DIGIT() { return getToken(TestParser.DIGIT, 0); }
		public DigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).enterDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestListener ) ((TestListener)listener).exitDigit(this);
		}
	}

	public final DigitContext digit() throws RecognitionException {
		DigitContext _localctx = new DigitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_digit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); ((DigitContext)_localctx).DIGIT = match(DIGIT);
			((DigitContext)_localctx).value =  (((DigitContext)_localctx).DIGIT!=null?((DigitContext)_localctx).DIGIT.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}